# py-orderbook

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/server/: __init__.py  main.py  orderbook.py
src/server/orders/: __init__.py  manager.py  matcher.py  model.py  routes.py
src/server/securities/: __init__.py  model.py  routes.py
tests/server/orders/: matcher_test.py
